syntax = "proto3";

package auth;

// Service responsible for user authentication, registration,
// session management, and JWT token validation.
service AuthService {
    // Registers a new user account using email and password credentials.
    rpc CredentialsRegister(RegisterRequest) returns (EmptyResponseWithStatus);

    // Authenticates a user via email/password and returns a session (tokens + account info).
    rpc CredentialsLogin(CredentialsLoginRequest) returns (LoginResponse);

    // Invalidates a user session by revoking the specific refresh token.
    rpc Logout(LogoutRequest) returns (EmptyResponseWithStatus);

    // Generates a new pair of tokens (Access + Refresh) using a valid existing refresh token.
    // Used to maintain the session without re-entering credentials.
    rpc RefreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse);

    // Verifies the validity of an Access Token.
    // Typically used by the API Gateway or Guards to authorize incoming requests.
    rpc ValidateAccessToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// --- Token Validation ---

message ValidateTokenRequest {
    string accessToken = 1; // The JWT access token to verify
}

// Represents the decoded payload of a valid token
message ValidateTokenResponse {
    string id = 1;      // User ID extracted from the token
    string email = 2;   // User email extracted from the token
    string iat = 3;     // Issued At timestamp
    string exp = 4;     // Expiration timestamp
}

// --- Token Refresh Flow ---

message RefreshTokensRequest {
    string agent = 1;        // User Agent string (browser/device info) for security tracking
    string refreshToken = 2; // The current valid refresh token
}

message RefreshTokensResponse {
    string accessToken = 1;          // Newly generated short-lived access token
    RefreshToken refreshToken = 2;   // Newly generated long-lived refresh token (token rotation)
}

// --- Logout Flow ---

message LogoutRequest {
    string refreshToken = 1; // The token to be removed from the database/whitelist
}

// --- Registration Flow ---

message RegisterRequest {
    string fullName = 1;
    string email = 2;
    string password = 3; // Raw password (should be hashed by the service before storage)
}

// --- Common Responses ---

enum ResponseStatus {
    OK = 0;
    ERROR = 1;
}

// Generic response wrapper for operations that don't return specific data.
// Note: gRPC native status codes can also be used, but this allows explicit status handling.
message EmptyResponseWithStatus {
    ResponseStatus status = 1;
    optional string error_message = 2; // Present only if status is ERROR
}

// --- Login Flow ---

message CredentialsLoginRequest {
    string email = 1;
    string password = 2;
    string agent = 3; // User Agent for session identification
}

// Minimal user information returned upon successful login
message Account {
    string id = 1;
    string fullName = 2;
    string email = 4; // Note: field index 3 is skipped (or reserved)
}

// Represents the persistent refresh token entity
message RefreshToken {
    string id = 1;              // Unique identifier of the token record in DB
    string token = 2;           // The actual token string (UUID or JWT)
    string expInISOString = 3;  // Expiration date in ISO 8601 format
    string userAgent = 4;       // Device/Browser information associated with this token
}

message RefreshAndAccessTokens {
    RefreshToken refreshToken = 1;
    string accessToken = 2;
}

// Composite response for login: contains user profile and security tokens
message LoginResponse {
    Account account = 1;
    RefreshAndAccessTokens tokens = 2;
}